--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "ganache-core": "^2.13.2",
     "jsonwebtoken": "^8.5.1",
     "monk": "^7.3.3",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "web3": "^1.3.4"
   }
 }
