--- a/package.json
+++ b/package.json
@@ -1,31 +1,32 @@
 {
-  "name": "electrothon",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/notshekhar/Electrothon-3.0.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/notshekhar/Electrothon-3.0/issues"
-  },
-  "homepage": "https://github.com/notshekhar/Electrothon-3.0#readme",
-  "dependencies": {
-    "cookie-parser": "^1.4.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "ganache-core": "^2.13.2",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.15",
-    "monk": "^7.3.3",
-    "morgan": "^1.10.0",
-    "web3": "^1.3.4"
-  }
+    "name": "electrothon",
+    "version": "1.0.0",
+    "description": "",
+    "main": "server.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node server.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/notshekhar/Electrothon-3.0.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/notshekhar/Electrothon-3.0/issues"
+    },
+    "homepage": "https://github.com/notshekhar/Electrothon-3.0#readme",
+    "dependencies": {
+        "cookie-parser": "^1.4.5",
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1",
+        "ganache-core": "^2.13.2",
+        "ipfs-http-client": "^49.0.2",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^5.11.15",
+        "monk": "^7.3.3",
+        "morgan": "^1.10.0",
+        "web3": "^1.3.4"
+    }
 }
